# CenterFusion

./: .gitattributes  .gitignore  .gitmodules  .run.sh.swp  CMakeLists.txt  README.md  requirements.txt  run.sh
data/: .gitattributes  val_top1000.json
include/: centerfusion.h  config.h  postprocess.h  preprocess.h
include/common/: argsParser.h
nusc_pub/: CMakeLists.txt
nusc_pub/src/: fusion_det.py  lidar_camera_sync.py  nusc_det.py  sort_2d.py  sort_3d.py
results_valid/: calib0.bin.txt  calib1.bin.txt  calib10.bin.txt  calib100.bin.txt  calib101.bin.txt  calib103.bin.txt  calib106.bin.txt  calib107.bin.txt  calib11.bin.txt  calib110.bin.txt  calib111.bin.txt  calib112.bin.txt  calib113.bin.txt  calib114.bin.txt  calib115.bin.txt  calib116.bin.txt  calib117.bin.txt  calib118.bin.txt  calib12.bin.txt  calib120.bin.txt  calib121.bin.txt  calib124.bin.txt  calib125.bin.txt  calib126.bin.txt  calib127.bin.txt  calib129.bin.txt  calib13.bin.txt  calib130.bin.txt  calib131.bin.txt  calib132.bin.txt  calib135.bin.txt  calib136.bin.txt  calib137.bin.txt  calib138.bin.txt  calib139.bin.txt  calib14.bin.txt  calib140.bin.txt  calib141.bin.txt  calib142.bin.txt  calib145.bin.txt  (+841 more)
results_valid/bev_nms/: calib0.bin.txt  calib1.bin.txt  calib10.bin.txt  calib100.bin.txt  calib101.bin.txt  calib102.bin.txt  calib103.bin.txt  calib104.bin.txt  calib105.bin.txt  calib106.bin.txt  calib107.bin.txt  calib108.bin.txt  calib109.bin.txt  calib11.bin.txt  calib110.bin.txt  calib111.bin.txt  calib112.bin.txt  calib113.bin.txt  calib114.bin.txt  calib115.bin.txt  calib116.bin.txt  calib117.bin.txt  calib118.bin.txt  calib119.bin.txt  calib12.bin.txt  calib120.bin.txt  calib121.bin.txt  calib122.bin.txt  calib123.bin.txt  calib124.bin.txt  calib125.bin.txt  calib126.bin.txt  calib127.bin.txt  calib128.bin.txt  calib129.bin.txt  calib13.bin.txt  calib130.bin.txt  calib131.bin.txt  calib132.bin.txt  calib133.bin.txt  (+941 more)
results_valid/fusvalid/: calib0.bin.txt  calib1.bin.txt  calib10.bin.txt  calib100.bin.txt  calib101.bin.txt  calib102.bin.txt  calib103.bin.txt  calib104.bin.txt  calib105.bin.txt  calib106.bin.txt  calib108.bin.txt  calib109.bin.txt  calib11.bin.txt  calib110.bin.txt  calib111.bin.txt  calib112.bin.txt  calib113.bin.txt  calib116.bin.txt  calib117.bin.txt  calib118.bin.txt  calib119.bin.txt  calib12.bin.txt  calib120.bin.txt  calib122.bin.txt  calib123.bin.txt  calib128.bin.txt  calib13.bin.txt  calib133.bin.txt  calib134.bin.txt  calib136.bin.txt  calib14.bin.txt  calib143.bin.txt  calib144.bin.txt  calib146.bin.txt  calib147.bin.txt  calib148.bin.txt  calib149.bin.txt  calib15.bin.txt  calib150.bin.txt  calib151.bin.txt  (+847 more)
src/: centerfusion.cpp  concatenate.cu  postprocess.cpp  postprocess.cu  preprocess.cpp  preprocess.cu  samplecenterfusion.cpp
tools/CenterFusion/: requirements.txt
tools/nusc_pub/: package.xml
(+84 files in other folders)
